# login-tracker

./: MANIFEST.in  README.md  README.rst  setup.cfg
login_tracker/: admin.py  apps.py  models.py  signals.py
login_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
login_tracker/migrations/: 0001_initial.py  0002_auto_20211102_1151.py  0003_loginhistorytracker_user_agent.py  0004_remove_loginhistorytracker_browser.py
