[metadata]
name = login_tracker
version = 0.3
description = A Django app to conduct Web-based login_tracker.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/doddahulugappa/login-tracker
author = Doddahulugappa
author_email = doddahulugappa@gmail.com
project_urls =
    Bug Tracker = https://github.com/doddahulugappa/login-tracker/issues

license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.1